# aero-spec-agent

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  THIRD_PARTY_NOTICES.md  prd.md  pyproject.toml
apps/web/: package-lock.json  package.json  tsconfig.json
docs/: agent-run-async-main-path.md  agent-run-user-test-guide.md  async-agent-run-browser-qa.md  async-job-runner-plan.md  browser-qa-deep-design-result.md  browser-qa-deep-design.md  browser-qa-report.md  compare-view-browser-qa.md  compare-view-design.md  compare-view-export-browser-qa.md  compare-view-export-report.md  compare-view-mvp-implementation.md  compare-view-mvp-plan.md  deep-agents-design-controller.md  deep-agents-runtime-plan.md  deep-design-compare-view-e2e-qa.md  deep-design-merge-checklist.md  deep-design-merge-summary.md  deep-design-regression-after-runtime-layer.md  demo-ready-report.md  demo-scenarios.md  demo-script.md  design-metrics-mvp-qa.md  design-metrics-service-plan.md  frontend-graph-runtime-ui.md  frontend-qa-checklist.md  graph-mode-qa-report.md  graph-observability-dashboard.md  issue-triage-rules.md  langgraph-main-flow-plan.md  layout-maturity-matrix.md  layout-openvsp-qa.md  layout-openvsp-real-qa.md  layout-visual-qa.md  next-phase-openvsp-plan.md  no-tool-call-fallback-qa.md  openvsp-capability-roadmap.md  openvsp-deep-design-qa.md  openvsp-deep-design-validation.md  openvsp-env-check.md  (+17 more)
scripts/: check_openvsp_env.py  run_openvsp_qa.sh  seed_demo_designs.py  summarize_qa_status.py  validate_layout_matrix.py  validate_openvsp_pipeline.py
tests/: conftest.py
(+293 files in other folders)
