[project]
name = "aero-spec-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.2",
  "trimesh>=4.10.0",
  "openai>=1.30.0",
  "langgraph>=0.2.0",
  "langgraph-checkpoint-sqlite>=2.1.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["services*"]
namespaces = true

[tool.ruff]
line-length = 100
target-version = "py311"
